Added intro section

--- a/app/css/portfolio-site.css
+++ b/app/css/portfolio-site.css
@@ -11,6 +11,31 @@ hr {
   max-width: 70px;
 }
 
+.page-section {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.section-heading {
+  text-transform: uppercase;
+}
+
+.section-heading .section-heading-upper {
+  display: block;
+  font-size: 1rem;
+  font-weight: 800;
+}
+
+.section-heading .section-heading-lower {
+  display: block;
+  font-size: 3rem;
+  font-weight: 100;
+}
+
+.bg-faded {
+  background-color: rgba(52, 58, 64, 0.85);
+}
+
 #mainNav {
   font-family: 'Raleway';
 }
@@ -40,6 +65,49 @@ hr {
   }
 }
 
+footer {
+  padding: 25px 0;
+  text-align: center;
+}
+
+footer p.copyright {
+  font-size: 90%;
+  line-height: 40px;
+  text-transform: none;
+  font-family: 'Raleway';
+}
+
+footer ul.quicklinks {
+  font-size: 90%;
+  line-height: 40px;
+  margin-bottom: 0;
+  text-transform: none;
+  font-family: 'Raleway';
+}
+
+ul.social-buttons {
+  margin-bottom: 0;
+}
+
+ul.social-buttons li a {
+  font-size: 20px;
+  line-height: 40px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  color: white;
+  border-radius: 100%;
+  outline: none;
+  background-color: #212529;
+}
+
+ul.social-buttons li a:focus, ul.social-buttons li a:hover {
+  background-color: #66ccff;
+}
+
 .site-heading {
   padding-top: 2.5rem;
   margin-bottom: 2.5rem;
@@ -58,4 +126,38 @@ hr {
   display: block;
   font-size: 1.5rem;
   font-weight: 300;
+}
+
+.intro {
+  position: relative;
+}
+
+@media (min-width: 992px) {
+  .intro .intro-img {
+    width: 75%;
+    float: right;
+  }
+  .intro .intro-text {
+    left: 0;
+    width: 60%;
+    margin-top: 3rem;
+    position: absolute;
+  }
+  .intro .intro-text .intro-button {
+    width: 100%;
+    left: 0;
+    position: absolute;
+    bottom: -2rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .intro .intro-text {
+    width: 45%;
+  }
+}
+
+.btn-primary {
+  background-color: #66ccff;
+  border-color: #66ccff;
 }
