--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -1,4 +1,5 @@
 .intro {
+  padding-top: 65px;
   position: relative;
   @media (min-width: 992px) {
     .intro-img {
@@ -23,4 +24,4 @@
       width: 45%;
     }
   }
-} 
+}
