--- a/app/scss/_bootstrap-overrides.scss
+++ b/app/scss/_bootstrap-overrides.scss
@@ -1,6 +1,11 @@
 .btn-primary{
   background-color: $primary;
   border-color: $primary;
+
+  &:hover{
+    background-color: darken($primary, 10%);
+    border-color: darken($primary, 10%);
+  }
 }
 
 .text-primary{
