--- a/app/scss/portfolio-site.scss
+++ b/app/scss/portfolio-site.scss
@@ -5,4 +5,5 @@
 @import "footer.scss";
 @import "header.scss";
 @import "intro.scss";
+@import "disciplines.scss";
 @import "bootstrap-overrides.scss";
