added profile to about me

--- a/app/scss/portfolio-site.scss
+++ b/app/scss/portfolio-site.scss
@@ -6,4 +6,5 @@
 @import "header.scss";
 @import "intro.scss";
 @import "disciplines.scss";
+@import "about.scss";
 @import "bootstrap-overrides.scss";
