--- a/app/css/portfolio-site.css
+++ b/app/css/portfolio-site.css
@@ -1,7 +1,3 @@
-a {
-  color: #66ccff;
-}
-
 h1,
 h2,
 h3,
@@ -9,6 +5,14 @@ h4,
 h5,
 h6 {
   font-family: 'Raleway';
+}
+
+.thin {
+  font-weight: 300;
+}
+
+.thick {
+  font-weight: 700;
 }
 
 hr {
@@ -38,6 +42,11 @@ hr {
 
 .bg-faded {
   background-color: rgba(52, 58, 64, 0.85);
+}
+
+.no-padding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
 
 .nav-wrapper {
@@ -193,6 +202,39 @@ ul.social-buttons li a:focus, ul.social-buttons li a:hover {
   color: #343a40;
 }
 
+ul.social-links li a {
+  color: #fff;
+  outline: none;
+}
+
+ul.social-links li a:focus, ul.social-links li a:hover {
+  color: #66ccff;
+}
+
+@media (min-width: 992px) {
+  #profile {
+    max-width: 30%;
+  }
+  ul.social-links {
+    margin-bottom: 0;
+  }
+  ul.social-links li a {
+    font-size: 20px;
+    line-height: 40px;
+    display: block;
+    width: 40px;
+    height: 40px;
+    -webkit-transition: all 0.3s;
+    -moz-transition: all 0.3s;
+    transition: all 0.3s;
+    color: #fff;
+    outline: none;
+  }
+  ul.social-links li a:focus, ul.social-links li a:hover {
+    color: #66ccff;
+  }
+}
+
 .btn-primary {
   background-color: #66ccff;
   border-color: #66ccff;
@@ -205,4 +247,8 @@ ul.social-buttons li a:focus, ul.social-buttons li a:hover {
 
 .text-primary {
   color: #66ccff !important;
+}
+
+.bg-primary {
+  background-color: #66ccff !important;
 }
