--- a/app/scss/_global.scss
+++ b/app/scss/_global.scss
@@ -1,7 +1,3 @@
-a{
-  color: $primary;
-}
-
 h1,
 h2,
 h3,
@@ -9,6 +5,14 @@ h4,
 h5,
 h6 {
   @include heading-font;
+}
+
+.thin{
+  font-weight: 300;
+}
+
+.thick{
+  font-weight: 700;
 }
 
 hr{
@@ -36,4 +40,9 @@ hr{
 
 .bg-faded {
   background-color: fade-out($gray-800, 0.15);
+}
+
+.no-padding{
+  padding: 0 !important;
+  margin: 0 !important;
 }
