Experience and Education on about page

--- a/app/scss/portfolio-site.scss
+++ b/app/scss/portfolio-site.scss
@@ -5,6 +5,6 @@
 @import "footer.scss";
 @import "header.scss";
 @import "intro.scss";
-@import "disciplines.scss";
 @import "about.scss";
+@import "timeline.scss";
 @import "bootstrap-overrides.scss";
