--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,5 +1,6 @@
 #profile{
-  
+  padding: 0 !important;
+  box-shadow: 2px 2px 5px 2px #888888;
 }
 
 ul.social-links{
@@ -14,6 +15,11 @@ ul.social-links{
     }
   }
 }
+
+.discipline-box i{
+  color: $gray-400;
+}
+
 
 @media (min-width: 992px) {
   #profile{
